--- a/index.html
+++ b/index.html
@@ -113,21 +113,21 @@ nav ul li a {
         <h2>Menu Kami</h2>
         <div class="product">
             <h3>Kol Isi Tahu</h3>
-            <img src="c:\Users\Jurusan PPLG x RPL\Downloads\kol.jfif" alt="Kol Isi Tahu">
+            <img src="kol.png" alt="Kol Isi Tahu">
             <p>Deskripsi: kol isi tahu adalah makanan sehat.</p>
             <p>Harga: Rp 5.000</p>
         </div>
 
         <div class="product">
             <h3>Kol Isi Tahu</h3>
-            <img src="c:\Users\Jurusan PPLG x RPL\Downloads\kol.jfif" alt="Kol Isi Tahu">
+            <img src="kol.png" alt="Kol Isi Tahu">
             <p>Deskripsi: kol isi tahu adalah makanan sehat.</p>
             <p>Harga: Rp 5.000</p>
         </div>
 
         <div class="product">
             <h3>Kol Isi Tahu</h3>
-            <img src="c:\Users\Jurusan PPLG x RPL\Downloads\kol.jfif" alt="Kol Isi Tahu">
+            <img src="kol.png" alt="Kol Isi Tahu">
             <p>Deskripsi: kol isi tahu adalah makanan sehat.</p>
             <p>Harga: Rp 5.000</p>
         </div>
