--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ nav ul li a {
         <h2>CONTACT</h2>
         <a href="https://www.instagram.com/rsmaapryntii/?igsh=Mm1sY3pvNjdodjhy">
             <div class="bicon">
-                <img src="c:\Users\Administrator\Downloads\ig-removebg-preview.png" class="icon" alt="Instagram">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/800px-Instagram_logo_2022.svg.png" class="icon" alt="Instagram">
             </div>
         </a>
     </div>
